# DatabaseTask

./: .gitignore  CMakeLists.txt
include/: CitiesTable.h  Condition.h  ConnectionParametrs.h  ITableField.h  MainWindow.h  Query.h  QueryProcessor.h  Table.h  TableDelegate.h  TableField.h  TableMacro.h  TableModel.h
src/: Condition.cpp  ConnectionParametrs.cpp  ITableField.cpp  MainWindow.cpp  QueryProcessor.cpp  Table.cpp  main.cpp
ui_files/: MainWindow.ui
